# Test_Task_OracleStat

./: README.md  main.py  pyproject.toml
tests/: test_checker.py  test_utils.py  test_validator.py
url_checker/: checker.py  constants.py  utils.py  validator.py
